--- a/docker_ml/Dockerfile
+++ b/docker_ml/Dockerfile
@@ -1,17 +1,13 @@
 FROM python:3.7
 
-COPY . /app
-
 # set work directory
-WORKDIR /app
+WORKDIR /model
 
-ENV FLASK_APP=app.py
-ENV FLASK_RUN_HOST=0.0.0.0
+COPY analyzer.py .
 
 # install dependencies
 COPY * .
 RUN pip install -r requirements.txt
 
-EXPOSE 5000
 
-CMD ["flask", "run"]
+CMD ["python", "analyzer.py"]
