--- a/docker_ml/Dockerfile
+++ b/docker_ml/Dockerfile
@@ -4,10 +4,15 @@ FROM python:3.7
 WORKDIR /model
 
 COPY analyzer.py .
+COPY vader_API.py .
+
+ENV FLASK_APP=vader_API.py
+ENV FLASK_RUN_HOST=0.0.0.0
 
 # install dependencies
 COPY * .
 RUN pip install -r requirements.txt
 
+EXPOSE 80
 
-CMD ["python", "analyzer.py"]
+CMD ["flask", "run"]
